tests/deffective/E0425/src/main.rs
fn main() {
    let x = unknown_variable; // error: unresolved name `unknown_variable`
}
